registry/kubefirst/components/kubefirst/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubefirst
  namespace: kubefirst
  annotations:
    kubernetes.io/ingress.class: traefik-external
    argocd.argoproj.io/sync-wave: '10'
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`kubefirst.k8s.dev.io`)
      services:
        - name: kubefirst
          port: 80
  tls:
    secretName: kubefirst-tls
